fix co-containts and layout issues

--- a/igamt-hl7-client/src/styles.scss
+++ b/igamt-hl7-client/src/styles.scss
@@ -364,7 +364,7 @@ background-color: saddlebrown;
 background-color: blue;
 }
 .section-content{
-  max-height: 700px;
+  max-height: 600px;
   overflow: scroll;
   padding: 5px;
 }
@@ -391,13 +391,15 @@ p-dialog{
   height: 55px;
 }
 .toc-panel-body{
-  overflow: scroll;
+  overflow: auto;
   max-height: 700px;
   border-right: 1px solid #d4d4d4;
 }
 
 .document-container {
   border-bottom: 1px solid #d4d4d4;
+  padding-bottom: 100px;
+  position: relative;
 }
 
 .header-color {
@@ -410,4 +412,19 @@ p-dialog{
 body .toc .ui-widget-header {
   background-color:  #e0e0e0 !important;
 
+}
+.fixed-ig-header
+{
+  top: 100px !important;
+  position: fixed;
+  z-index: 320;
+  height: 60px;
+  width: 100%;
+  background-color: wheat;
+}
+.fixed-ig-sub-header{
+  top: 160px !important;
+  position: fixed;
+  z-index: 320;
+  height: 100px;
 }
